# StockTradebyZ

./: .gitignore  BACKTEST_README.md  CANDLESTICK_CHART_DOCUMENTATION.md  CHARTING_LIBRARY_RESEARCH.md  DATA_CLEANING_GUIDE.md  DEPLOYMENT.md  FETCH_IMPROVEMENTS.md  README.md  README_ENHANCED.md  SCHEDULER_DOCUMENTATION.md  SCHEDULER_FAILURE_ANALYSIS.md  Selector.py  backtest.py  backtest_report.py  backtest_report.txt  backtest_report_week.txt  check_latest_dates.py  configs.json  demo_failed_list_cleanup.py  example_auto_switch.py  example_xd_stock_detection.py  fetch_data.bat  fetch_kline.py  generate_report.bat  get_stockname.py  main.py  merge_data.py  merge_log_20250718_165917.txt  merge_log_20250718_165937.txt  merge_log_20250718_170005.txt  pyproject.toml  quick_clean.py  run_backtest.bat  run_cli.bat  run_stock_selection.bat  run_tests.bat  select_stock.py  select_stock_enhanced.py  setup_mootdx.bat  start_api.bat  (+14 more)
Tasks/: Todo-HumanNote.md
api/: __init__.py  main.py  models.py  scheduler_service.py  stock_data_service.py
database/: __init__.py  config.py  init_db.py  models.py  operations.py
docs/: SELECTION_RESULT_README.md
scheduler/: __init__.py  scheduler.py
selection_result/: selection_result_20250729.csv  selection_result_20250730.csv  selection_result_20250801.csv  selection_result_20250804.csv  selection_result_20250805.csv  selection_result_20250806.csv
static/: app.js  candlestick-chart.js  chart-modal.js  index.html  styles.css  test-chart.html
test_scripts/: test_auto_switch_datasource.py  test_backtest.py  test_failed_list_cleanup.py  (+5 more)
(+11 files in other folders)
