[project]
name = "stocktradebyz"
version = "0.1.0"
description = "Stock Trading Analysis Tool with Z哥战法"
requires-python = ">=3.10"
dependencies = [
    "akshare==1.17.7",
    "mootdx==0.11.7",
    "numpy>=1.21.0,<2.0.0",
    "optuna>=4.0.0",
    "pandas>=2.0.0,<3.0.0",
    "scipy>=1.15.3",
    "tqdm>=4.60.0",
    "tushare>=1.4.0",
]
